--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Title</title>
+  <title>Tic-Tac=Toe</title>
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="main.css">
   <!-- Require jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
   <!-- HTML Body -->
-  <h1>Tic Tac Toe</h1>
-  <img src="http://www.cs.utah.edu/~gk/atwork/img/hevequip2.gif" alt="under construction"></img>
-  <!-- Tic Tac Toe Board here -->
-  <!-- Reset button -->
+  <div id="container">
+    <h1>Tic Tac Toe</h1>
+    <div id="board-container">
+      <div class="box" id="a-1">&nbsp;</div>
+      <div class="box" id="a-2">&nbsp;</div>
+      <div class="box" id="a-3">&nbsp;</div>
+      <div class="box" id="b-1">&nbsp;</div>
+      <div class="box" id="b-2">&nbsp;</div>
+      <div class="box" id="b-3">&nbsp;</div>
+      <div class="box" id="c-1">&nbsp;</div>
+      <div class="box" id="c-2">&nbsp;</div>
+      <div class="box" id="c-3">&nbsp;</div>
+    <!--<img src="http://www.cs.utah.edu/~gk/atwork/img/hevequip2.gif" alt="under construction"></img>-->
+    <!-- Tic Tac Toe Board here -->
+    <button id="reset">reset game</button>
+    <!-- Reset button -->
+    </div>
+  </div>
 </body>
 </html>
