minor style updates and tie evaluated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- HTML Body -->
   <div id="container">
     <h1>Tic Tac Toe</h1>
+    <div id="game_msg"></div>
     <div id="board-container">
       <div class="box" id="a-1">&nbsp;</div>
       <div class="box" id="a-2">&nbsp;</div>
